--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -1,1 +1,4 @@
 PORT = 4000
+
+MONGO_URI=mongodb+srv://GrimoireP6:DvTcwx64Q43T1lLU@openclassrooms.muaak.mongodb.net/<dbname>?retryWrites=true&w=majority
+
