--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,6 +14,14 @@
     "mongoose": "^8.12.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose-unique-validator": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5"
+
   }
 }
